test/compilable/imports/test7373b.d
module imports.test7373b;

void foo()
{
}

struct S
{
}
