test/fail_compilation/fail212.d

struct S
{
    void foo() const
    {
    }

    static void bar() const
    {
    }
}
